enhance jar creator and add container status interface